--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "this is the project for learning",
   "main": "index.js",
   "scripts": {
-  
-    "dev": "nodemon -r dotenv/config--experimental-json-modules index.js"
+    "dev": "nodemon  src/index.js"
   },
   "keywords": [
     "javascript",
